--- a/myResume/presentation/features/skills/view/SkillsViewController.storyboard
+++ b/myResume/presentation/features/skills/view/SkillsViewController.storyboard
@@ -40,6 +40,7 @@
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nuh-Q9-ci5">
                                                             <rect key="frame" x="16" y="7" width="24" height="24"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="24" id="4CK-vD-p32"/>
                                                                 <constraint firstAttribute="height" constant="24" id="wrw-VQ-fR2"/>
