Added compositional layout.

--- a/myResume/presentation/features/skills/view/SkillsViewController.storyboard
+++ b/myResume/presentation/features/skills/view/SkillsViewController.storyboard
@@ -29,17 +29,17 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="skillCollectionViewCell" id="DW3-F5-ZZ4" userLabel="skillsCollectionViewCell" customClass="SkillsCollectionViewCell" customModule="myResume" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="103.66666666666666" height="38"/>
+                                        <rect key="frame" x="0.0" y="50" width="103.66666666666666" height="27.333333333333329"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="YFH-7t-cns">
-                                            <rect key="frame" x="0.0" y="0.0" width="103.66666666666666" height="38"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="103.66666666666666" height="27.333333333333329"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fv6-yP-wls">
-                                                    <rect key="frame" x="0.0" y="0.0" width="103.66666666666667" height="38"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="103.66666666666667" height="27.333333333333332"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nuh-Q9-ci5">
-                                                            <rect key="frame" x="16" y="7" width="24" height="24"/>
+                                                            <rect key="frame" x="16" y="1.6666666666666661" width="24" height="24"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="24" id="4CK-vD-p32"/>
@@ -47,7 +47,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuo-Yw-OmE">
-                                                            <rect key="frame" x="48" y="4" width="39.666666666666657" height="30"/>
+                                                            <rect key="frame" x="48" y="4" width="39.666666666666657" height="19.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -58,7 +58,6 @@
                                                         <constraint firstAttribute="trailing" secondItem="yuo-Yw-OmE" secondAttribute="trailing" constant="16" id="B7E-Yf-kah"/>
                                                         <constraint firstItem="yuo-Yw-OmE" firstAttribute="top" secondItem="fv6-yP-wls" secondAttribute="top" constant="4" id="LBQ-yy-bDL"/>
                                                         <constraint firstAttribute="bottom" secondItem="yuo-Yw-OmE" secondAttribute="bottom" constant="4" id="TCq-Dt-Xeo"/>
-                                                        <constraint firstAttribute="height" constant="38" id="buG-r3-7m4"/>
                                                         <constraint firstItem="nuh-Q9-ci5" firstAttribute="centerY" secondItem="fv6-yP-wls" secondAttribute="centerY" id="keU-zP-mAu"/>
                                                         <constraint firstItem="yuo-Yw-OmE" firstAttribute="leading" secondItem="nuh-Q9-ci5" secondAttribute="trailing" constant="8" id="ker-aj-CCF"/>
                                                         <constraint firstItem="nuh-Q9-ci5" firstAttribute="leading" secondItem="fv6-yP-wls" secondAttribute="leading" constant="16" id="sKI-j9-42K"/>
@@ -95,6 +94,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="ETo-rk-HpJ" firstAttribute="centerY" secondItem="Rbf-GA-GJp" secondAttribute="centerY" id="DUA-pc-k5n"/>
                                         <constraint firstAttribute="trailing" secondItem="ETo-rk-HpJ" secondAttribute="trailing" constant="16" id="aY0-cK-AMd"/>
